# automated-claims-processing

./: .env.example  .gitignore  README.md  RESULTS.md  SOLUTION.md  pyproject.toml
data/: policy.md
data/claims/claim 1/: description.txt
data/claims/claim 10/: description.txt
data/claims/claim 19/: description.txt
data/claims/claim 2/: description.txt
data/claims/claim 20/: description.txt
data/claims/claim 21/: description.txt
data/claims/claim 22/: description.txt
data/claims/claim 23/: description.txt
data/claims/claim 24/: description.txt
data/claims/claim 25/: description.txt
evaluation/: README.md  evaluate_pipeline.py  evaluation_models.py  generate_report.py  summarize_results.py  test_single_claim.py
results/: evaluation_report.json  evaluation_results.json  evaluation_results_summary.json
src/claim_processing_pipeline/: config.py  constants.py  main.py  pipeline.py  prompts.py  schemas.py  utils.py
src/claim_processing_pipeline/api/: models.py  routers.py
src/claim_processing_pipeline/experts/: __init__.py  applicable_policy_section.py  document_analyser.py  document_processor.py  fraud_detector.py  policy_reasoner.py
