[project]
name = "automated-claims-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Inês Magessi", email = "inesmagessi1011@gmail.com"},
]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "imutils>=0.5.4",
    "paddlepaddle>=3.3.0",
    "paddleocr>=3.4.0",
    "opencv-python>=4.13.0.90",
]
requires-python = ">=3.11,<=3.12"
readme = "README.md"
license = {text = "Proprietary"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
app = "python3 ./src/claim_processing_pipeline/main.py"
